--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 <body>
 
 <div id="myDIV" class="header" style="display: flex; align-items: center;justify-content: center; flex-direction: column;">
-  <h2 style="margin:5px">My To Do List</h2>
+  <h2 style="margin:5px; font-size: 40px;
+  margin-bottom: 50px;">My To Do List</h2>
   <div class="box" style="width: 50%; display: flex;align-items: center;justify-content: center;gap: 20px;">
     <input style="border-radius: 20px; outline: none; padding: 10px 20px;" type="text" id="myInput" style="width: 50%;" placeholder="Enter a task here">
   <span style="border-radius: 5px;" onclick="newElement()" class="addBtn">Add</span>
