--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 
 <div id="myDIV" class="header" style="display: flex; align-items: center;justify-content: center; flex-direction: column;">
   <h2 style="margin:5px; font-size: 40px;
-  margin-bottom: 50px;">My To Do List</h2>
+  margin-bottom: 50px;color: aqua;margin-top: 150px;">My To Do List</h2>
   <div class="box" style="width: 50%; display: flex;align-items: center;justify-content: center;gap: 20px;">
-    <input style="border-radius: 20px; outline: none; padding: 10px 20px;" type="text" id="myInput" style="width: 50%;" placeholder="Enter a task here">
+    <input style="outline: none;background-color: inherit; border-bottom: 1px solid aqua; color: aqua; padding: 10px 20px;" type="text" id="myInput" style="width: 50%;" placeholder="Enter a task here">
   <span style="border-radius: 5px;" onclick="newElement()" class="addBtn">Add</span>
   </div>
 </div>
 
 <ul id="myUL" style="display: flex;align-items: center;justify-content: center;flex-direction: column;">
-  <li >hello</li>
+  <li style="background-color: #000;">hello</li>
 </ul>
 
 <script src="./main.js"></script>
